2006-07-07  David Gilbert  <david.gilbert@object-refinery.com>

	* javax/swing/border/TitledBorder.java
	(setTitlePosition): Added message to exception,
	(setTitleJustification): Likewise.

2006-07-07  David Gilbert  <david.gilbert@object-refinery.com>

	* javax/swing/plaf/metal/MetalLookAndFeel.java
	(createDefaultTheme): Corrected API docs,
	(initComponentDefaults): Added entry for 'TitledBorder.border',
	(getCurrentTheme): Initialise theme if it is null.

2006-07-07  Roman Kennke  <kennke@aicas.com>

	* java/awt/Component.java
	(isValid): Return false when component has no peer,
	don't query the showing state.

2006-07-07  Audrius Meskauskas  <AudriusA@Bioinformatics.org>

	* javax/swing/text/FlowView.java (FlowStrategy.layoutRow):
	Advance the offset also in the case of the enforced break.

2006-07-07  David Gilbert  <david.gilbert@object-refinery.com>

	* javax/swing/plaf/basic/BasicArrowButton.java
	(MAXIMUM_SIZE): Removed field,
	(MINIMUM_SIZE): Likewise,
	(PREFERRED_SIZE): Likewise,
	(getMaximumSize): Return new instance every time,
	(getMinimumSize): Likewise,
	(getPreferredSize): Likewise.

2006-07-07  Roman Kennke  <kennke@aicas.com>

	* java/awt/LightweightDispatcher.java
	(findTarget):  Avoid array copying in
	Container.getComponents().

2006-07-07  Roman Kennke  <kennke@aicas.com>

	* javax/swing/JComponent.java
	(paintChildrenWithOverlap): Avoid array copying in
	Container.getComponents().
	(paintChildrenOptimized): Avoid array copying in
	Container.getComponents().
	(fireAncestorEvent):  Avoid array copying in
	Container.getComponents().
	(findOverlapFreeParent): Avoid array copying in
	Container.getComponents().

2006-07-07  Matt Wringe <mwringe@redhat.com>

	* javax/crypto/spec/PBEKeySpec.java: Updated copyright year.
	(passwordValid): New field.
	(setPassword): New method.
	(setSalt): Likewise.
	(setIterationCount): Likewise.
	(setKeyLength): Likewise.
	(PBEKeySpec(char[])): Use new setter methods.
	(PBEKeySpec(char[], byte[], int)): Likewise.